flux/apps/base/kagent/kagent/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ingress
spec:
  tls:
    - hosts:
        - kagent.orion.lab.margays.dev
  rules:
    - host: kagent.orion.lab.margays.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kagent-ui
                port:
                  number: 8080
